Update dido and oddjob dependencies.